# PythonGRAPHS

./: 3D_MFPADs.ipynb  3D_MFPADs_CH11_experiment.ipynb  3D_MFPADs_CH9_experiment.ipynb  3D_MFPADs_exp_all.ipynb  3D_MFPADs_experiment.ipynb  3D_MFPADs_experimnent.ipynb  3D_MFPADs_experimnents.ipynb  3D_MFPADs_plotly.ipynb  3D_MFPADs_plotly_triangualtion.ipynb  3D_MFPADs_theory_plotly.ipynb  72_2D_MFPADs.ipynb  72_2D_MFPADs_CH11_experiment.ipynb  72_2D_MFPADs_CH9_experiment .ipynb  72_2D_MFPADs_CH9_experiment.ipynb  72_2D_MFPADs_experiment.ipynb  72_2D_MFPADs_experiment_COPY.ipynb  72_2D_MFPADs_theory.ipynb  72_MFPADs.ipynb  Ar_calibration.ipynb  Auger_ENSCAN.ipynb  N2_calibration.ipynb  b1_map.ipynb  b1_map.py  b1_map_CH11.ipynb  b1_map_CH9.ipynb  b1_map_COPY.ipynb  b1_slice.ipynb  clean_pycache.py  contrast_map.ipynb  contrast_map_CH11.ipynb  contrast_map_CH9.ipynb  contrast_map_COPY.ipynb  diatomic_ALLCH.ipynb  diatomic_ENSCAN.ipynb  distance_optimization.ipynb  distance_optimization_COPY.ipynb  double_ionization.ipynb  function_giammi.py  functions_giammi.py  functions_minuit.py  (+12 more)
lmf2root 3.3a_lin-Reaction - R_FMOx - 550eV/: 550_USER_Analysis_bck  CMakeLists.txt  Cobold2011_Header-Template_1HPTDC_LMFv10.lmf  ColAHelL.cfg  ColAHelL.cfg.BCK_before_ALLCH  ColAHelL_x86.lib  HOWTO_compile_on_LINUX.txt  Header-Template_1HPTDC_v2.lmf  LMF2root_VS2010.sln  LMF2root_VS2010.vcxproj  LMF2root_VS2010.vcxproj.filters  LMF2root_VS2015.sln  LMF2root_VS2015.vcxproj  LMF2root_VS2015.vcxproj.filters  LMF2root_VS2017.sln  LMF2root_VS2017.vcxproj  LMF2root_VS2017.vcxproj.filters  User_Analysis.bck  User_Analysis_kilian_vector_rotation.bck  Version.txt  clean_this_folder.bat  config.txt  corr_11800-1400ns.txt  corr_11800-1400ns_old_.txt  correction_table_elec.txt  correction_table_rec.txt  lmf2root_resource.rc  lmf2root_resource.res  resort64c_VS2010_x64.lib  resort64c_VS2010_x86.lib
lmf2root 3.3a_lin-Reaction - R_FMOx - 550eV/ADC/: ADC_analysis.cpp  ADC_analysis.h  ADC_bilinear.cpp  ADC_bilinear.h  ADC_helper_functions.cpp  ADC_helper_functions.h  ADC_meta.cpp  ADC_meta.h  ADC_parameters.txt  ADC_settings.cpp  ADC_settings.h  ADC_trilinear.cpp  ADC_trilinear.h  Event.cpp  Event.h  H1D.cpp  H1D.h  H2D.cpp  MyPunkt.h
lmf2root 3.3a_lin-Reaction - R_FMOx - 550eV/ColAHelL/: CH_Event.h  CH_Interface.h  ColAHelL_VS2010.vcxproj  ColAHelL_VS2010.vcxproj.filters  ColAHelL_VS2015.vcxproj  ColAHelL_VS2017.vcxproj  Version.txt
lmf2root 3.3a_lin-Reaction - R_FMOx - 550eV/IPA/: Fish_Tool.cpp  IPA_VS2010.vcxproj  IPA_VS2010.vcxproj.filters  IPA_VS2015.vcxproj  IPA_VS2017.vcxproj  IPA_VS2017.vcxproj.filters  IonTOF_Tool.cpp  LUT_Tool.cpp  PIPICO_Tool.cpp  Version.txt  Wiggle_Tool.cpp  ipa.cpp  ipa.h  ipa_user.cpp
lmf2root 3.3a_lin-Reaction - R_FMOx - 550eV/Src/: Console.h  DetStruct.h  HDF5_IO.cpp  HDF5_IO.h  Histo.cpp  Histo.h  LMF2root.cpp  LMF2root.h  LMF_IO.cpp  LMF_IO.h  MFC_stuff.cpp  Ueberstruct.h  _analysis.cpp  help.cpp  (+16 more)
(+133 files in other folders)
